--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Mina Tavakoli</h2>
                   <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in.</p>
-                  <p><a href="about.html">Checkout my resume</a></p>
+                  <p><a href="about.html">Check out my resume</a></p>
                   <ul class="ftco-footer-social list-unstyled mt-4">
                     <li><a href="#"><span class="icon-twitter"></span></a></li>
                     <li><a href="#"><span class="icon-facebook"></span></a></li>
@@ -185,7 +185,7 @@
             </a>
             <div class="text">
               <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfolio-single.html">Project name</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
@@ -198,7 +198,7 @@
             </a>
             <div class="text order-1">
               <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-single.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfoli-single.html">Project name</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
@@ -211,7 +211,7 @@
             </a>
             <div class="text">
               <h4 class="subheading">Illustration</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfolio-single.html">Project name</a></h2>
               <p>I have developed my illustrating skills both digitally and by classic drawing at my free time. Above is an example of an assignment i did for an article in the KTH magazine Osqledaren. <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -223,7 +223,7 @@
             </a>
             <div class="text order-1">
               <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfoli-single.html">Project name</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
@@ -236,7 +236,7 @@
             </a>
             <div class="text">
               <h4 class="subheading">Animation</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfoli-singleo.html">Project name</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
@@ -249,7 +249,7 @@
             </a>
             <div class="text order-1">
               <h4 class="subheading">Branding</h4>
-              <h2 class="heading"><a href="portfoli-singleo.html">Even the all-powerful Pointing has no control</a></h2>
+              <h2 class="heading"><a href="portfoli-singleo.html">Project name</a></h2>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
               <p><a href="#">View Project</a></p>
             </div>
