--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
               </div>
             </a>
             <div class="text">
-              <h4 class="subheading">Web Design</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Project name</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">Computer visualizaion</h4>
+              <h2 class="heading"><a href="portfolio-single.html">Raytracing</a></h2>
+              <p>For a lab in introduction du visualization we rendered objects with help of raytracing using C++ and inviwo</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -197,9 +197,9 @@
               </div>
             </a>
             <div class="text order-1">
-              <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="portfoli-single.html">Project name</a></h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text.</p>
+              <h4 class="subheading">UX/UI</h4>
+              <h2 class="heading"><a href="portfoli-single.html">CO2GO</a></h2>
+              <p>We created a high functionality prototype for an app idea called CO2GO which calculates and compares differences in carbon dioxide for different travelling mehtods. The prototype was created as a web app with PHP, HTML, JavaScript and CSS.</p>
               <p><a href="#">View Project</a></p>
             </div>
           </div>
@@ -211,8 +211,8 @@
             </a>
             <div class="text">
               <h4 class="subheading">Illustration</h4>
-              <h2 class="heading"><a href="portfolio-single.html">Project name</a></h2>
-              <p>I have developed my illustrating skills both digitally and by classic drawing at my free time. Above is an example of an assignment i did for an article in the KTH magazine Osqledaren. <p><a href="#">View Project</a></p>
+              <h2 class="heading"><a href="portfolio-single.html">Studying with drugs</a></h2>
+              <p>I have developed my illustrating skills both digitally and by classic drawing at my free time. Above is an example of an illustration assignment i did for an article  called "Studying with drugs" in the KTH magazine Osqledaren. <p><a href="#">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
